--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
+    "query-string": "^6.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
